# bigint-optimized

./: .gitignore  CMakeLists.txt  README.md
tests/: big_integer_testing.cpp
